--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next-auth": "^4.23.2",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.6",
+    "prisma": "^5.4.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0"
