--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "next-auth": "^4.23.2",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.6",
-    "prisma": "^5.4.2",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -28,6 +28,7 @@
     "eslint": "^8",
     "eslint-config-next": "13.5.5",
     "postcss": "^8",
+    "prisma": "^5.4.2",
     "tailwindcss": "^3",
     "typescript": "^5"
   }
