--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.1.13",
+    "@prisma/client": "^5.4.2",
     "framer-motion": "^10.16.4",
     "next": "13.5.5",
     "next-auth": "^4.23.2",
