--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@nextui-org/react": "^2.1.13",
     "@prisma/client": "^5.4.2",
+    "bcryptjs": "^2.4.3",
+    "crypto-js": "^4.2.0",
     "framer-motion": "^10.16.4",
+    "js-sha256": "^0.10.1",
     "next": "13.5.5",
     "next-auth": "^4.23.2",
     "next-themes": "^0.2.1",
@@ -22,6 +26,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
