--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@nextui-org/react": "^2.1.13",
     "@prisma/client": "^5.4.2",
+    "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
     "crypto-js": "^4.2.0",
     "framer-motion": "^10.16.4",
