base profile created

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
+    "sonner": "^1.0.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
