--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "crypto-js": "^4.2.0",
     "framer-motion": "^10.16.4",
     "js-sha256": "^0.10.1",
+    "jsonwebtoken": "^9.0.2",
     "next": "13.5.5",
     "next-auth": "^4.23.2",
     "next-themes": "^0.2.1",
@@ -25,10 +26,12 @@
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "sonner": "^1.0.3",
+    "universal-cookie": "^6.1.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.5",
+    "@types/jsonwebtoken": "^9.0.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
