Bio working but header in home page not working

--- a/.env
+++ b/.env
@@ -11,6 +11,8 @@ NEXTAUTH_SECRET=supersecret
 NEXT_PUBLIC_NEXTAUTH_URL=http://localhost:3000
 GOOGLE_ID=895998382796-2htlq0t1ecpu56hu8ltas2r43j9o99n2.apps.googleusercontent.com
 GOOGLE_SECRET=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
-
+PUSHER_APP_ID="1707718"
+PUSHER_APP_KEY="cc883f8f5eca615325ac"
+PUSHER_APP_SECRET="121c817d8309dfa9c5ec"
 
 
