--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "framer-motion": "^10.16.4",
     "js-sha256": "^0.10.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "next": "13.5.5",
     "next-auth": "^4.23.2",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.6",
+    "pusher": "^5.1.3",
+    "pusher-js": "^8.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
