--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.454.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@nextui-org/react": "^2.1.13",
     "@prisma/client": "^5.4.2",
+    "aws-sdk": "^2.1499.0",
     "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
     "crypto-js": "^4.2.0",
@@ -30,6 +32,8 @@
     "react-icons": "^4.11.0",
     "sonner": "^1.0.3",
     "universal-cookie": "^6.1.1",
+    "uploadthing": "^6.0.1",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
