--- a/.env
+++ b/.env
@@ -11,8 +11,10 @@ NEXTAUTH_SECRET=supersecret
 NEXT_PUBLIC_NEXTAUTH_URL=http://localhost:3000
 GOOGLE_ID=895998382796-2htlq0t1ecpu56hu8ltas2r43j9o99n2.apps.googleusercontent.com
 GOOGLE_SECRET=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
+AWS_ACCESS_KEY_ID=AKIATJ4FKHXAD5ZWCS2J
+AWS_SECRET_ACCESS_KEY=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
+BUCKET_NAME=econnectbucket
 PUSHER_APP_ID="1707718"
 PUSHER_APP_KEY="cc883f8f5eca615325ac"
 PUSHER_APP_SECRET="121c817d8309dfa9c5ec"
-
 
