initializing shad-cdn

--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "aws-sdk": "^2.1511.0",
     "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "crypto-js": "^4.2.0",
     "framer-motion": "^10.16.4",
     "js-sha256": "^0.10.1",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.303.0",
     "multer": "^1.4.5-lts.1",
     "next": "13.5.5",
     "next-auth": "^4.23.2",
@@ -32,6 +35,8 @@
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "sonner": "^1.0.3",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7",
     "universal-cookie": "^6.1.1",
     "uploadthing": "^6.0.1",
     "uuid": "^9.0.1",
