--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "next-auth": "^4.23.2",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.6",
-    "pusher": "^5.1.3",
-    "pusher-js": "^8.3.0",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0-rc2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
