fix: Messages Styling

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
     "crypto-js": "^4.2.0",
+    "draft-js": "^0.11.7",
     "framer-motion": "^10.16.4",
     "js-sha256": "^0.10.1",
     "jsonwebtoken": "^9.0.2",
@@ -31,6 +32,7 @@
     "pusher-js": "^8.4.0-rc2",
     "react": "^18",
     "react-dom": "^18",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-icons": "^4.11.0",
     "sonner": "^1.0.3",
     "universal-cookie": "^6.1.1",
