--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "multer": "^1.4.5-lts.1",
     "next": "13.5.5",
     "next-auth": "^4.23.2",
+    "next-i18next": "^15.2.0",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.6",
     "pusher": "^5.2.0",
