--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "next-auth": "^4.23.2",
     "next-i18next": "^15.2.0",
     "next-themes": "^0.2.1",
-    "nodemailer": "^6.9.6",
+    "nodemailer": "^6.9.9",
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0-rc2",
     "react": "^18",
@@ -45,6 +45,7 @@
     "@types/bcryptjs": "^2.4.5",
     "@types/jsonwebtoken": "^9.0.4",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
