feat: Rich text messaging

--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "@nextui-org/react": "^2.1.13",
     "@prisma/client": "^5.4.2",
     "@pusher/push-notifications-web": "^1.1.0",
+    "@tiptap/pm": "^2.4.0",
+    "@tiptap/react": "^2.4.0",
+    "@tiptap/starter-kit": "^2.4.0",
     "aws-sdk": "^2.1511.0",
     "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
     "crypto-js": "^4.2.0",
     "draft-js": "^0.11.7",
     "framer-motion": "^10.16.4",
+    "html-react-parser": "^5.1.10",
     "js-sha256": "^0.10.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
