--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "eslint": "^8",
     "eslint-config-next": "13.5.5",
     "postcss": "^8",
+    "postcss-nesting": "^12.1.5",
     "prisma": "^5.4.2",
     "tailwindcss": "^3",
     "typescript": "^5"
