--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.478.0",
     "@aws-sdk/lib-storage": "^3.478.0",
+    "@mantine/hooks": "^7.10.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@nextui-org/react": "^2.1.13",
     "@prisma/client": "^5.4.2",
     "@pusher/push-notifications-web": "^1.1.0",
+    "@tanstack/react-query": "^5.44.0",
     "@tiptap/pm": "^2.4.0",
     "@tiptap/react": "^2.4.0",
     "@tiptap/starter-kit": "^2.4.0",
@@ -39,6 +41,7 @@
     "react-dom": "^18",
     "react-draft-wysiwyg": "^1.15.0",
     "react-icons": "^4.11.0",
+    "react-query": "^3.39.3",
     "sonner": "^1.0.3",
     "universal-cookie": "^6.1.1",
     "uploadthing": "^6.0.1",
