--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "js-sha256": "^0.10.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    "next": "13.5.5",
+    "next": "^13.5.7",
     "next-auth": "^4.23.2",
     "next-i18next": "^15.2.0",
     "next-themes": "^0.2.1",
@@ -47,6 +47,7 @@
     "universal-cookie": "^6.1.1",
     "uploadthing": "^6.0.1",
     "uuid": "^9.0.1",
+    "webpack": "^5.94.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
