--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nextui-org/react": "^2.1.13",
     "@prisma/client": "^5.4.2",
     "@pusher/push-notifications-web": "^1.1.0",
+    "@sendgrid/mail": "^8.1.3",
     "@tanstack/react-query": "^5.44.0",
     "@tiptap/pm": "^2.4.0",
     "@tiptap/react": "^2.4.0",
