--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.478.0",
     "@aws-sdk/lib-storage": "^3.478.0",
+    "@headlessui/react": "^2.1.10",
+    "@headlessui/tailwindcss": "^0.2.1",
     "@mantine/hooks": "^7.10.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@nextui-org/react": "^2.1.13",
