--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@pusher/push-notifications-web": "^1.1.0",
     "@sendgrid/mail": "^8.1.3",
     "@tanstack/react-query": "^5.44.0",
+    "@tiptap/extension-placeholder": "^2.9.1",
     "@tiptap/pm": "^2.4.0",
     "@tiptap/react": "^2.4.0",
     "@tiptap/starter-kit": "^2.4.0",
