--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-draft-wysiwyg": "^1.15.0",
+    "react-error-boundary": "^4.1.2",
     "react-icons": "^4.11.0",
     "react-query": "^3.39.3",
     "sharp": "^0.33.5",
