--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "html-react-parser": "^5.1.10",
     "js-sha256": "^0.10.1",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1",
     "next": "^13.5.7",
     "next-auth": "^4.23.2",
