--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nextui-org/react": "^2.1.13",
     "@prisma/client": "^5.4.2",
     "@pusher/push-notifications-web": "^1.1.0",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@sendgrid/mail": "^8.1.3",
     "@tanstack/react-query": "^5.44.0",
