--- a/amplify.yml
+++ b/amplify.yml
@@ -8,33 +8,46 @@ frontend:
   phases:
     preBuild:
       commands:
-        - echo "Starting preBuild phase at $(date)"
+        - 'echo "Starting preBuild phase at $(date)"'
         - npm ci --cache .npm --prefer-offline
-        - export NODE_OPTIONS="--max_old_space_size=4096" # Increase Node.js memory limit
+        - 'export NODE_OPTIONS="--max_old_space_size=4096"' # Increase Node.js memory limit
         # Create the .env.production file and append environment variables
         - touch .env.production
-        - echo "Creating environment variables file"
-        # Add necessary environment variables to the .env.production file with error handling
-        - env | grep -e CALLBACK_URL -e DATABASE_URL -e JWT_SECRET -e NEXTAUTH_SECRET -e NEXT_PUBLIC_NEXTAUTH_URL -e NODDEMAILER_EMAIL -e RESEND_KEY -e S3SECRET_ACCESS_KEY -e S3ACCESS_KEY_ID -e BUCKET_NAME -e PUSHER_APP_SECRET -e PUSHER_APP_ID -e PUSHER_APP_KEY -e PUSHER_CLUSTER -e NODEMAILER_PASS >> .env.production || echo "Warning: Some environment variables might be missing"
+        - 'echo "Creating environment variables file"'
+        # Simplify the environment variable setup to avoid YAML parsing issues
+        - 'env | grep -e DATABASE_URL >> .env.production || true'
+        - 'env | grep -e JWT_SECRET >> .env.production || true'
+        - 'env | grep -e NEXTAUTH_SECRET >> .env.production || true'
+        - 'env | grep -e NEXT_PUBLIC_NEXTAUTH_URL >> .env.production || true'
+        - 'env | grep -e CALLBACK_URL >> .env.production || true'
+        - 'env | grep -e RESEND_KEY >> .env.production || true'
+        - 'env | grep -e S3SECRET_ACCESS_KEY >> .env.production || true'
+        - 'env | grep -e S3ACCESS_KEY_ID >> .env.production || true'
+        - 'env | grep -e BUCKET_NAME >> .env.production || true'
+        - 'env | grep -e PUSHER_APP_SECRET >> .env.production || true'
+        - 'env | grep -e PUSHER_APP_ID >> .env.production || true'
+        - 'env | grep -e PUSHER_APP_KEY >> .env.production || true'
+        - 'env | grep -e PUSHER_CLUSTER >> .env.production || true'
+        - 'env | grep -e NODEMAILER_PASS >> .env.production || true'
+        - 'env | grep -e NODDEMAILER_EMAIL >> .env.production || true'
         # Generate Prisma client for the correct environment
-        - echo "Generating Prisma client"
-        - npx prisma generate || { echo "Prisma generation failed, continuing anyway"; }
-        - echo "Starting build monitor"
-        - node build-monitor.js & # Start build monitor in background
-        - echo "preBuild phase completed at $(date)"
+        - 'echo "Generating Prisma client"'
+        - npx prisma db push
+        - npx prisma generate
+        - 'echo "preBuild phase completed at $(date)"'
     build:
       commands:
-        - echo "Build phase started on $(date)"
-        - echo "NODE_OPTIONS: $NODE_OPTIONS"
-        - echo "Running Next.js build"
-        # Use standard build instead of the custom script to ensure it works
-        - npm run build || { echo "Build failed with exit code $?"; exit 1; }
-        - echo "Build phase completed on $(date)"
+        - 'echo "Build phase started on $(date)"'
+        - 'echo "NODE_OPTIONS: $NODE_OPTIONS"'
+        - 'echo "Running Next.js build"'
+        # Simplified build command
+        - next build
+        - 'echo "Build phase completed on $(date)"'
     postBuild:
       commands:
-        - echo "Post-build phase started on $(date)"
+        - 'echo "Post-build phase started on $(date)"'
         # Don't try to run the server in CI as it might not work
-        - echo "Build artifacts created successfully"
+        - 'echo "Build artifacts created successfully"'
   artifacts:
     baseDirectory: .next
     files:
