refactor: Simplify build command in amplify.yml from 'next build' to 'npm run build' for improved consistency and clarity in the build process.

--- a/amplify.yml
+++ b/amplify.yml
@@ -41,7 +41,7 @@ frontend:
         - 'echo "NODE_OPTIONS: $NODE_OPTIONS"'
         - 'echo "Running Next.js build"'
         # Simplified build command
-        - next build
+        - npm run build
         - 'echo "Build phase completed on $(date)"'
     postBuild:
       commands:
