--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-error-boundary": "^4.1.2",
     "react-icons": "^4.11.0",
     "react-query": "^3.39.3",
+    "recharts": "^2.15.1",
     "resend": "^4.0.1",
     "sharp": "^0.33.5",
     "socket.io": "^4.8.1",
