--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "next-i18next": "^15.2.0",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.9",
+    "openai": "^4.91.1",
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0-rc2",
     "react": "^18",
